# S2_cookiecutter

./: .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/mnist_cookie/: api.py  data.py  main.py
tests/: test_data.py  test_model.py
